<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="action_settings">Settings</string>


    <string name="heading">Budget: </string>
    <string name="category">Category</string>
    <!--  Add Income, Add transaction button  -->
    <string name="add_incomes_heading">Add new Income</string>
    <string name="add_expenses_heading">Add new Expense</string>

    <!--  Add transaction/income form  -->
    <string name="form_title">Title</string>
    <string name="form_description">Description</string>
    <string name="form_amount">Amount(€)</string>

    <!--  List of incomes and expens  -->
    <string name="incomes_label">Incomes</string>
    <string name="expenses_label">Expenses</string>
    
    <!--  Add Income, Add transaction button  -->
    <string name="add_income_button">Add Income</string>
    <string name="add_expense_button">Add Expense</string>
    <string name="delete_button">Delete transaction</string>


</resources>