<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/heading"/>
        <TextView
            android:id="@+id/budget_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add_income_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_income_button"/>
        <Button
            android:id="@+id/add_expense_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_expense_button"/>
    </LinearLayout>



</LinearLayout>